mise en forme du header

--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
 
 /* header section*/
 
+
+/*mise en forme de python*/
+
 .header {
     display: flex;
     justify-content: space-between;
